--- a/SearchEngine/SearchEngine/Data/history.txt
+++ b/SearchEngine/SearchEngine/Data/history.txt
@@ -9,3 +9,13 @@ con ca doi nam trong doi ca
  con me may doKKK
 search
 
+hello
+con cho +conbo -conmeo chiu luon do AND chet tia may di
+con me may do AND chiu luon do con di
+hello ban oi chiu luon di
+hello ban oi cai lon gi vay
+con me may chiu luon di
+ma may chiu luon do con di
+lon que gi vay
+lfajsldfkjaslfkjaslfkjaslfdkjasldfkj AND djlkfsdjlkfjl dfalskfdjlskdf
+con me may AND con cho con meo +conlon -conbo Camera $300
