Update exact search
Fixed struct
Currently searching for exact match

--- a/SearchEngine/SearchEngine/Data/history.txt
+++ b/SearchEngine/SearchEngine/Data/history.txt
@@ -26,3 +26,71 @@ hello +WordCup
 hello -No
 hello No
 hello games is best known
+hello
+hello
+hello
+hello
++hello
++hello
+cac +hello
+hello hello
+hello +hello
+hello +cac
+hello +cac
+hello +cac
+hello +cac
+hello +cac
+hello +cac
+hello
+hello +cailma
+hello +cac
+hello +cailmemay
+hello +cac
+hello
+hello
+hello
+hello +hello
+no +man
++man
++hello
++man
++hello
++hello
++hello +conmeo
++hello -hello
+what up guy +hello
+No man sky
+no man
+no man sky
+hello
+no man
+no manan
+vai l
+five stories celebrating
+five stories celebrating
+five stories celebrating
+five stories celebrating
+five stories celebrating
+five story celebrating
+five stories celebrating
+five stories celebrating
+five * celebrating
+five story celebrating
+five stories celebrating
+five * celebrating
+five
+five *
+five * * *
+five stories *
+five stories celebrating
+five stories * celebrating
+five stories
+five stories
+five stories * trees
+five stories celebrating *
+five celebrating
+five stories
+five stories * * * *
+five * celebrating
+"cac bu"
+five stories
