Finish * for stopwords
Fixed * bug for stopwords

--- a/SearchEngine/SearchEngine/Data/history.txt
+++ b/SearchEngine/SearchEngine/Data/history.txt
@@ -94,3 +94,76 @@ five stories * * * *
 five * celebrating
 "cac bu"
 five stories
+five
++hello Nguyen Lam Tuong AND huynh lam hai dang -money
+"cac bu"
+p
+"cac bu" vai lon
+"cac bu" vai lon
+"cac bu" vai lon
+"cac bu" vai cac
+"five * celebrating"
+hello
+ello
+hello
+ddd
+S
+"five * celebrating"
+hello
+"five * celebrating" hello
+"five * celebrating" hello
+"celebrating *" hello
+"and * ability"
+"five * celebrating"
++hello
++hello "no man sky"
+"five"
+"five * ability"
+"five * celebrating"
+"lunar * of"
+"lunar * of"
+"lunar * of"
+"Skrinking moon"
+"the head * an"
+"lunar * of"
+"lunar fifteenth"
+"lunar * of"
+hello
+"five * celebrating"
+"the * of"
+"and * ability"egan
+megan
+"she * that"
+"She * that"
+"lunar * of"
+megan
+"from any * with"
+"World Cup * France"
+"Sweden handed"
+"lunar * of"
+"lunar"
+lunar
+"sweden present * first"
+"lunar * of"
+lunar
+"lunar * of"
+"lunar * of"
+"lunar * of"
+"lunar * of"
+"lunar *"
+"lunar * of the"
+"lunar * of the seventh"
+"lunar * of the seventh"
+"lunar * of the seventh"
+"lunar * of the seventh"
+"lunar * of the seventh"
+"lunar * of the seventh"
+"lunar * of the seventh"
+"lunar * of the seventh"
+"largest"
+"largest *"
+"largest * * preserves
+"largest * * is making"
+wildlife
+wildlife preserve
+"wildlife * is marking"
