fixed some mistakes

--- a/SearchEngine/SearchEngine/Data/history.txt
+++ b/SearchEngine/SearchEngine/Data/history.txt
@@ -167,3 +167,21 @@ lunar
 wildlife
 wildlife preserve
 "wildlife * is marking"
+longest * in theold
+longest * in the world
+sacramento *
+intitle:los
+filetype:csv
+for
+the
+los * 
+los *
+los*
+intitle:new
+intitle:l
+intitle:los
+Barack Obama
+Trump - president
+Trump -president
+-thing
+"los *"
